--- a/css/sass/footer.scss
+++ b/css/sass/footer.scss
@@ -1,204 +1,249 @@
-.foo-content{
-    background: #fff;
-    border-top: 1px solid #e2e2e2;
-    margin-top: 30px;
-    padding: 30px 0;
-    
-    h3{
-        color: #8c8c8c;
-        margin-bottom: 20px;
-        text-transform: uppercase;
+@use "core/variables" as *;
+@use "base" as *;
+
+/**
+ * Footer
+ * TODO: Update HTML to use BEM classes:
+ * - .foo-content -> .footer__content
+ * - .foo-payment -> .footer__payment
+ * - .foo-contact -> .footer__contact
+ * - .foo-seals -> .footer__seals
+ * - .foo-message -> .footer__message
+ * - .links-list -> .footer__links-list
+ * - .social-list -> .footer__social-list
+ * - .payment-gateways -> .footer__payment-gateways
+ */
+
+.footer {
+    &__content {
+        background: $bg-white;
+        border-top: $border-width solid $border-gray;
+        margin-top: $spacing-xxxl;
+        padding: $spacing-xxxl 0;
         
-        @include typo(1.8rem, 700, $font, 2rem); 
-    }
-    
-    h5{
-        color: #8c8c8c;
-        margin: 5px 0;
-        padding: 0 0 0 5px;
-        text-transform: uppercase;
-        
-        @include typo(1rem, 700, $font, 1.5rem);
-    }
-    
-    .links-list{
-        
-        li{
-            margin-bottom: 10px;
+        h3 {
+            color: $text-light-gray;
+            margin-bottom: $spacing-xl;
+            text-transform: uppercase;
+            
+            @include typo($font-size-xxxl, $font-weight-bold, $font, $font-size-display-sm); 
         }
         
-        a{
-            color: #8c8c8c;
-            display: inline-block; 
+        h5 {
+            color: $text-light-gray;
+            margin: $spacing-sm 0;
+            padding: 0 0 0 $spacing-sm;
+            text-transform: uppercase;
             
-            @include typo(1.4rem, 300, $font, 1.6rem);
+            @include typo($font-size-base, $font-weight-bold, $font, $font-size-lg);
         }
-    }
-    
-    .social-list{
         
-        .social-list{
-            
-            li{
-                margin-bottom: 15px;
+        &__links-list {
+            li {
+                margin-bottom: $spacing-md;
             }
             
-            a{
-                display: block;
-                font-size: 1.6rem;
-                line-height: 20px;
+            a {
+                color: $text-light-gray;
+                display: inline-block; 
                 
-                &:hover,
-                &:focus{
-                    text-decoration: none;
+                @include typo($font-size-md, $font-weight-light, $font, $font-size-xl);
+            }
+        }
+        
+        &__social-list {
+            .social-list {
+                li {
+                    margin-bottom: $spacing-lg;
                 }
                 
-                img{
-                    display: inline-block;
-                    margin-right: 5px;
-                    vertical-align: top;
+                a {
+                    display: block;
+                    font-size: $font-size-xl;
+                    line-height: $spacing-xl;
+                    
+                    &:hover,
+                    &:focus {
+                        text-decoration: none;
+                    }
+                    
+                    img {
+                        display: inline-block;
+                        margin-right: $spacing-sm;
+                        vertical-align: top;
+                    }
+                }
+            }
+        }
+        
+        &__payment-gateways {
+            @media (min-width: 768px) and (max-width: 991px) {
+                clear: left;
+            }
+            
+            .payment-form {
+                padding: $spacing-xs;
+                
+                img {
+                    max-height: 27px;
+                }
+            }
+            
+            .row {
+                margin-left: -$spacing-xs;
+                margin-right: 0;
+            }
+            
+            svg {
+                max-width: 100%;
+            }
+            
+            .security-title {
+                margin-top: $spacing-xl;
+            }
+        }
+        
+        @media screen and (max-width: $sm) {
+            .container > div {
+                margin-top: 70px;
+                
+                &:first-child {
+                    margin-top: 0;
                 }
             }
         }
     }
-    
-    .payment-gateways{
-        
-        @media (min-width: 768px) and (max-width: 991px){
-            clear: left;
+
+    &__payment {
+        max-width: 320px;
+    }
+
+    &__contact {
+        @media screen and (min-width: 768px) and (max-width: 992px) {
+            margin-bottom: 70px;
         }
         
-        .payment-form{
-            padding: 3px;
+        i {
+            display: inline-block;
+            font-size: 0;
+            height: 36px;
+            margin-right: $spacing-md;
+            text-align: center;
+            vertical-align: middle;
+            width: 36px;
             
-            img{
-                max-height: 27px;
+            @media (min-width: 992px) {
+                display: none;
+            }
+            
+            @media (min-width: 1200px) {   
+                display: inline-block;
+            }
+            
+            @media (max-width: 767px) {   
+                display: inline-block;
+            }
+                
+            &:before {
+                content: '';
+                display: inline-block;
+                height: 36px;
+                vertical-align: middle;
+                width: 1%;
+            }
+            
+            svg {
+                display: inline-block;
+                fill: #9e9e9e;
+                max-width: 99%;
+                vertical-align: middle;
             }
         }
         
-        .row{
-            margin-left: -3px;
-            margin-right: 0;
+        p {
+            color: $text-light-gray;
+            display: inline-block;
+            vertical-align: middle;
+            width: 80%;
+            @include typo($font-size-md, $font-weight-normal, $font, $font-size-xxxl);
         }
         
-        svg{
-            max-width: 100%;
-        }
-        
-        .security-title{
-            margin-top: 20px;
-        }
-    }
-    
-    @media screen and (max-width: $sm){
-        
-        .container > div{
-            margin-top: 70px;
+        li {
+            margin-top: 17px;
             
-            &:first-child{
+            &:first-child {
                 margin-top: 0;
             }
         }
     }
-}
 
-.foo-payment{
-    max-width: 320px;
-}
-
-.foo-contact{
-    
-    @media screen and (min-width: 768px) and (max-width: 992px){
-        margin-bottom: 70px;
+    &__seals {
+        > li {
+            margin-bottom: $spacing-md;
+        }
+        
+        .seal-ebit {
+            margin-right: $spacing-md;
+        }
+        
+        center {
+            text-align: left;
+        }
+        
+        .google-safe {
+            background: $bg-white;
+            border-radius: $border-radius;
+            display: inline-block;
+            padding: $spacing-xs;
+            width: 115px;
+        }
     }
-    
-    i{
-        display: inline-block;
-        font-size: 0;
-        height: 36px;
-        margin-right: 10px;
+
+    &__message {
+        background: $bg-white;
+        color: $text-light-gray;
+        margin: 1px 0 $spacing-lg;
+        padding: $spacing-xxl 0;
         text-align: center;
-        vertical-align: middle;
-        width: 36px;
         
-        @media (min-width: 992px){
-            display: none;
-        }
+        @include typo($font-size-sm, $font-weight-normal, $font, $font-size-xl);
         
-        @media (min-width: 1200px){   
-            display: inline-block;
-        }
-        
-        @media (max-width: 767px){   
-            display: inline-block;
-        }
-            
-        &:before{
-            content: '';
-            display: inline-block;
-            height: 36px;
-            vertical-align: middle;
-            width: 1%;
-        }
-        
-        svg{
-            display: inline-block;
-            fill: #9e9e9e;
-            max-width: 99%;
-            vertical-align: middle;
-        }
-    }
-    
-    p{
-        color: #8c8c8c;
-        display: inline-block;
-        vertical-align: middle;
-        width: 80%;
-        @include typo(1.4rem, 400, $font, 1.8rem);
-    }
-    
-    li{
-        margin-top: 17px;
-        
-        &:first-child{
-            margin-top: 0;
+        .message-footer {
+            color: $text-light-gray;
         }
     }
 }
 
-.foo-seals{
-    
-    > li{
-        margin-bottom: 10px;
-    }
-    
-    .seal-ebit{
-        margin-right: 10px;
-    }
-    
-    center{
-        text-align: left;
-    }
-    
-    .google-safe{
-        background: #fff;
-        border-radius: 3px;
-        display: inline-block;
-        padding: 3px;
-        width: 115px;
-    }
+// Legacy selectors for backward compatibility
+// TODO: Remove after HTML is updated
+.foo-content {
+    @extend .footer__content;
 }
 
-.foo-message{
-    background: #fff;
-    color: #8c8c8c;
-    margin: 1px 0 15px;
-    padding: 25px 0;
-    text-align: center;
-    
-    @include typo(1.2rem, 400, $font, 1.6rem);
-    
-    .message-footer {
-        color: #8c8c8c;
-    }
+.foo-payment {
+    @extend .footer__payment;
+}
+
+.foo-contact {
+    @extend .footer__contact;
+}
+
+.foo-seals {
+    @extend .footer__seals;
+}
+
+.foo-message {
+    @extend .footer__message;
+}
+
+.links-list {
+    @extend .footer__content__links-list;
+}
+
+.social-list {
+    @extend .footer__content__social-list;
+}
+
+.payment-gateways {
+    @extend .footer__content__payment-gateways;
 }
