--- a/css/sass/menu-mobile.scss
+++ b/css/sass/menu-mobile.scss
@@ -1,4 +1,22 @@
-.menu-mobile{
+/**
+ * Menu Mobile
+ * TODO: Update HTML to use BEM classes:
+ * - .menu-mobile -> .menu-mobile (already follows BEM)
+ * - .trigger-menu -> .menu-mobile__trigger
+ * - .close-menu -> .menu-mobile__close
+ * - .menu-mobile-backdrop -> .menu-mobile__backdrop
+ * - .level1 -> .menu-mobile__level1
+ * - .level2 -> .menu-mobile__level2
+ * - .item-level1 -> .menu-mobile__item-level1
+ * - .item-level2 -> .menu-mobile__item-level2
+ * - .level1-check -> .menu-mobile__level1-check
+ * - .link-level1 -> .menu-mobile__link-level1
+ * - .link-level2 -> .menu-mobile__link-level2
+ * - .link-level3 -> .menu-mobile__link-level3
+ * - .arrow-menu-mobile -> .menu-mobile__arrow
+ */
+
+.menu-mobile {
     background: #3d4445;
     height: 100%;
     left: 0;
@@ -13,7 +31,7 @@
     left: -100vw;
     @extend .transition;
     
-    > h5{
+    > h5 {
         color: #fff;
         margin-bottom: 10px;
         text-transform: uppercase;
@@ -32,96 +50,87 @@
         }
     }
     
-    .level1{
+    &__level1 {
         position: relative;
         height: 90vh;
         overflow-y: scroll;
     }
     
-    .level2{
+    &__level2 {
         display: none;
         margin-top: 1px;
     }
     
-    .item-level1{
+    &__item-level1 {
         border-top: 1px solid rgba(255, 255, 255, 0.25);
         
-        &:first-child{
+        &:first-child {
             border-top: none;
         }
     }
     
-    .item-level1{
-        border-top: 1px solid rgba(255, 255, 255, 0.25);
-        margin-top: 1px;
-        
-        &:first-child{
-            border-top: none;
-        }
-    }
-    
-    .item-level2{
+    &__item-level2 {
         margin-top: 1px;
     }
     
-    .level1-check{
+    &__level1-check {
         display: none;
         
-        &:checked ~ .level2{
+        &:checked ~ .menu-mobile__level2 {
             display: block;
         }
         
-        &:checked ~ .link-level1{
+        &:checked ~ .menu-mobile__link-level1 {
             background: rgba(255,255,255,.3);
             border-bottom: 1px solid transparent;
         }
         
-        &:checked ~ .link-level1 .arrow-menu-mobile{
+        &:checked ~ .menu-mobile__link-level1 .menu-mobile__arrow {
             @include prefix('transform', 'rotate(90deg)');
         }
     }
     
-    .link-level1,
-    .link-level2,
-    .link-level3{
+    &__link-level1,
+    &__link-level2,
+    &__link-level3 {
         color: #fff;
         display: block;
         padding: 10px 5px;
         @include typo(1.6rem, 400, $font);
         
-        &:hover{
+        &:hover {
             text-decoration: none;
         }
         
-        &:active{
+        &:active {
             background: rgba(255,255,255,.3);
         }
     }
     
-    .link-level2{
+    &__link-level2 {
         background: rgba(255,255,255,.3);
         padding-left: 15px;
     }
     
-    .link-level3{
+    &__link-level3 {
         background: rgba(255,255,255,.3);
         padding-left: 30px;
     }
 }
 
-.trigger-menu{
+.menu-mobile__trigger {
     background: #a2a2a2;
     border: none;
     height: 55px;
     margin: 10px 0;
     width: 100%;
     
-    @media screen and (max-width: 480px){
+    @media screen and (max-width: 480px) {
         padding: 0;
     }
 }
 
-.close-menu{
+.menu-mobile__close {
     position: absolute;
     top: 0;
     left: 100%;
@@ -136,9 +145,8 @@
     color: #fff;
 }
 
-html{
-    
-    .menu-mobile-backdrop{
+html {
+    .menu-mobile__backdrop {
         background: rgba(0, 0, 0, 0);
         bottom: 0;
         content: '';
@@ -150,39 +158,88 @@ html{
         width: 100%;
         z-index: 10;
         @extend .transition;
-        
     }
     
-    .application{
+    .application {
         @include prefix('transform', 'translateX(0)');
         @extend .transition;
     }
     
-    &.menu-open{
+    &.menu-open {
         overflow: hidden;
         
-        .application{
+        .application {
             @include prefix('transform', 'translateX(260px)');
         }
         
-        body{
+        body {
             overflow-x: hidden;
         } 
         
-        .menu-mobile{
+        .menu-mobile {
             // @include prefix('transform', 'translateX(0)');
             left: 0;
         }
 
-        .menu-mobile-backdrop {
+        .menu-mobile__backdrop {
             background: rgba(0, 0, 0, 0.85);
             opacity: 1;
             visibility: visible;
         }
         
-        .backdrop-icon{
+        .backdrop-icon {
             opacity: 1;
             visibility: visible;
         }
     }
+}
+
+// Legacy selectors for backward compatibility
+// TODO: Remove after HTML is updated
+.trigger-menu {
+    @extend .menu-mobile__trigger;
+}
+
+.close-menu {
+    @extend .menu-mobile__close;
+}
+
+.menu-mobile-backdrop {
+    @extend .menu-mobile__backdrop;
+}
+
+.level1 {
+    @extend .menu-mobile__level1;
+}
+
+.level2 {
+    @extend .menu-mobile__level2;
+}
+
+.item-level1 {
+    @extend .menu-mobile__item-level1;
+}
+
+.item-level2 {
+    @extend .menu-mobile__item-level2;
+}
+
+.level1-check {
+    @extend .menu-mobile__level1-check;
+}
+
+.link-level1 {
+    @extend .menu-mobile__link-level1;
+}
+
+.link-level2 {
+    @extend .menu-mobile__link-level2;
+}
+
+.link-level3 {
+    @extend .menu-mobile__link-level3;
+}
+
+.arrow-menu-mobile {
+    @extend .menu-mobile__arrow;
 }
