--- a/css/sass/typo.scss
+++ b/css/sass/typo.scss
@@ -1,10 +1,13 @@
+@use "core/variables" as *;
+@use "base" as *;
+
 /**
  * Typography
  */
 
 a,
 a:hover {
-    color: #666;
+    color: $text-gray;
 }
 
 h1,
@@ -14,5 +17,5 @@ h4,
 h5,
 h6 {
     font-family: $font;
-    font-weight: 400;
+    font-weight: $font-weight-normal;
 } 
